cloud/onlyoffice/httproute-public/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: onlyoffice-public
spec:
  hostnames:
  - onlyoffice-public.suffix-automatic-replace
  parentRefs:
  - kind: Gateway
    namespace: gateways
    name: main-public
    sectionName: https-main
  rules:
  - backendRefs:
    - kind: Service
      name: onlyoffice
      port: 80
